ADD: ETH floor pricing (skeleton)

--- a/website_hugo/themes/HistoryOfNFTsDash/layouts/_default/single.html
+++ b/website_hugo/themes/HistoryOfNFTsDash/layouts/_default/single.html
@@ -94,6 +94,14 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="card-wrapper">
+                            <div class="card">
+                                <div class="card-content">
+                                    <img src="/img/eth-logo.svg" alt="eth-logo" width="25" style="float: left;" class="mr-3"><p class="title is-4">{{ .Params.currentFloor }}</p>
+                                    floor
+                                </div>
+                            </div>
+                        </div>
                         <!-- end of plugins/etc/ column -->
 
                     </div>
