ADD: js for project count

--- a/website_hugo/themes/HistoryOfNFTsDash/layouts/index.html
+++ b/website_hugo/themes/HistoryOfNFTsDash/layouts/index.html
@@ -35,13 +35,13 @@
           <div class="tile is-ancestor has-text-centered">
             <div class="tile is-parent">
               <article class="tile is-child box">
-                <p class="title">....</p>
+                <p class="title" id="projectCount">....</p>
                 <p class="subtitle">Projects</p>
               </article>
             </div>
             <div class="tile is-parent">
               <article class="tile is-child box">
-                <p class="title">...</p>
+                <p class="title" id="author-count">...</p>
                 <p class="subtitle">Authors
                 </p>
               </article>
