UPDATE: Searchbar Autocompletion

--- a/website_hugo/themes/HistoryOfNFTsDash/layouts/partials/footer.html
+++ b/website_hugo/themes/HistoryOfNFTsDash/layouts/partials/footer.html
@@ -48,7 +48,7 @@ function renderResults(results) {
 
   const content = results
     .map((item) => {
-      return `<li>${item}</li>`;
+      return `<li><a href="/posts/${item.toLowerCase()}">${item}</a></li>`;
     })
     .join('');
 
