FIX: Responsiveness header

--- a/website_hugo/themes/HistoryOfNFTsDash/layouts/index.html
+++ b/website_hugo/themes/HistoryOfNFTsDash/layouts/index.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 <div class="container">
   <div class="columns">
-    <div class="column is-3 ">
+    <div class="column is-3">
       <aside class="menu is-hidden-mobile">
         <p class="menu-label">
           General
@@ -13,7 +13,7 @@
       </aside>
     </div>
     <div class="column is-9">
-      <nav class="breadcrumb" aria-label="breadcrumbs">
+      <nav class="breadcrumb" aria-label="breadcrumbs" >
         <ul>
           <li class="is-active"><a href="../" aria-current="page">...</a></li>
           <li class="is-active"><a href="#" aria-current="page">Dashboard</a></li>
@@ -32,7 +32,7 @@
           </div>
         </div>
       </section>
-      <section class="info-tiles">
+      <section class="info-tiles is-hidden-mobile">
         <div class="tile is-ancestor has-text-centered">
           <div class="tile is-parent">
             <article class="tile is-child box">
