Changed navbar spacing

--- a/website_hugo/themes/HistoryOfNFTsDash/layouts/partials/header.html
+++ b/website_hugo/themes/HistoryOfNFTsDash/layouts/partials/header.html
@@ -81,7 +81,11 @@
   }
 </style>
 <!-- START NAV -->
-<nav class="navbar is-white">
+<div class="notification is-danger" id="notification">
+  <button class="delete" id="delete-notification"></button>
+  This website is still in pre-alpha release development phase. The visible data is not verified yet.
+</div>
+<nav class="navbar is-white mb-5">
   <div class="container level">
     <div class="navbar-brand navbar-left level-left">
       <a class="navbar-item brand-text" href="/index.html">
