Updated notification bar

--- a/website_hugo/themes/HistoryOfNFTsDash/layouts/partials/footer.html
+++ b/website_hugo/themes/HistoryOfNFTsDash/layouts/partials/footer.html
@@ -14,8 +14,11 @@
       </svg></a>
   </div>
 </footer>
-
 <script>
+  document.getElementById('delete-notification').addEventListener("click", function() {
+    document.getElementById("notification").remove();
+  });
+  
   var elementArr = [];
   var elements = document.getElementsByClassName('project-title');
 
